app/assets/stylesheets/legislation_process.scss
// Table of Contents
//
// 01. Utils
// 02. Hero
// 03. Legislation process navigation
// 04. Debate list
// 05. Debate quiz
// 06. Legislation draft
// 07. Legislation allegations
// 08. Legislation changes
// 09. Legislation comments
// 10. Legislation draft comment
//

// 01. Utils
// -----------------
.grey {
  color: #878787;
}

.grey-heading {
  background: #E6E6E6;
}

.center {
  text-align: center;
}

.right {
  text-align: right;
}

.strong {
  font-weight: 700;
}

$epigraph-font-size: rem-calc(15);
$epigraph-line-height: rem-calc(22);

// 02. Hero
// -----------------
.legislation-hero {
  padding-top: 1.5rem;

  @include breakpoint(medium) {
    padding-top: 3.5rem;
  }

  h4 {
    color: #878787;
    text-transform: uppercase;
    font-weight: 400;
  }

  ul {
    list-style: none;
    margin-left: 0;

    li:before {
      vertical-align: text-bottom;
      padding-right: 0.5rem;
      content: "■";
      color: #8AA8BE;
    }
  }
  
  #debate-show {
    display: none;
  }

  .debate-add-info {
    margin-top: 3rem;
    padding-top: 4rem;
    border-top: 1px solid darken($border, 10%);

    @include breakpoint(medium) {
      margin-bottom: 2rem;
    }

    .debate-info-wrapper {

      h2 {
        font-size: $lead-font-size;

        @include breakpoint(medium) {
          float: left;
        }
      }

      p {
        font-size: $epigraph-font-size;
        line-height: $epigraph-line-height;
        
        @include breakpoint(medium) {
          margin-left: 25%;
        }
      }
    }
  }

  .half-gradient {
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#e6e6e6+0,e6e6e6+50,ffffff+50 */
    background: #e6e6e6; /* Old browsers */
    background: -moz-linear-gradient(top, #e6e6e6 0%, #e6e6e6 50%, #ffffff 50%); /* FF3.6-15 */
    background: -webkit-linear-gradient(top, #e6e6e6 0%,#e6e6e6 50%,#ffffff 50%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, #e6e6e6 0%,#e6e6e6 50%,#ffffff 50%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6e6e6', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
  }

  .center .button {
    background: $brand;
    margin-bottom: 0;
  }

  .headline {
    margin-bottom: 1rem;

    @include breakpoint(medium) {
      margin-bottom: 4rem;

    }
  }

  .description {
    margin-bottom: 1rem;
    
    p {
      font-size: $epigraph-font-size;
      line-height: $epigraph-line-height;
    }
    
    ul {
      font-size: $epigraph-font-size;
      line-height: $epigraph-line-height;
      
      li {
        margin-bottom: 1rem;
        
        p {
          display: inline;
          margin-bottom: 0;
        }
      }
    }
    
    h4 {
      font-size: $base-font-size;
    }
  }

  .button-subscribe {
    margin-top: 1rem;

    h3 {
      margin-bottom: 0;
    }

    p {
      margin-bottom: 0;
      font-size: $small-font-size;
    }

    &:hover h3 {
      color: white;
    }

    @include breakpoint(medium) {
      padding: 0.5em 1em;
      margin-top: 3rem;
    }
  }
}

// 03. Legislation process navigation
// -----------------
.legislation-process-categories {
  position: relative;
  
  .legislation-process-list {
    border-bottom: 1px solid $medium-gray;
    margin: 0 1rem 1rem 1rem;
    
    @include breakpoint(medium) {
      margin-left: 0;
    }
    
    ul {
      position: relative;
      max-width: 75rem;
      margin-left: auto;
      margin-right: auto;
      list-style: none;
      padding-top: 4rem;
      padding-left: 0;
      margin-bottom: 0;
      
      @include breakpoint(medium) {
        padding-left: 1rem;
      }
      
      svg {
        position: absolute;
        top: 1.25rem;
        
        @include breakpoint(1280px) {
          transform: rotate(-6deg);
          left: -1rem;
        }
      }

      li {
        cursor: pointer;
        display: inline-block;
        margin: 0 1rem 1rem 0;
        transition: all 0.4s;
        border-bottom: 2px solid transparent;
        
        &:first-of-type {
          margin-left: 0;
        }
        
        &:hover,
        &:active,
        &:focus {
          border-bottom: 2px solid $brand;
        }

        @media (min-width: 950px) {
          margin: 0 0 0 3rem;
        }

        a,
        h4 {
          display: block;
          color: #6D6D6D;
          margin-bottom: 0;
        }

        a {
          &:hover, &:active {
            text-decoration: none;
          }

          p {
            margin-bottom: 0;

            @include breakpoint(medium) {
              margin-bottom: 1rem;
            }
          }
        }
      }

      .active {
        border-bottom: 2px solid $brand;
      }
    }
  }
}

// 04. Debate list
// -----------------
.debate-chooser {
  padding: 2rem 1rem;

  @include breakpoint(medium) {
    .debate-chooser {
      padding: 2rem 3rem;
    }
  }

  .debate-block {
    margin-bottom: 2.5rem;

    .debate-type {
      text-transform: uppercase;
      color: #178DCC;
      font-weight: 700;
      font-size: $small-font-size;

      .icon-debates {
        margin-left: 0.2rem;
      }
    }

    .debate-title a {
      color: $brand;
    }

    .debate-meta,
    .debate-meta a {
      font-size: $small-font-size;
      color: #6D6D6D;

      .icon-comments {
        margin-right: 0.2rem;
      }
    }
  }

  .debate-info {
    padding: 1rem;
    background: #F4F4F4;
  }
}
/* ... */

